Updated with Pictures of Players

--- a/Database.html
+++ b/Database.html
@@ -4,6 +4,8 @@
 	<script src="Database.js" defer></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link href="Database.css" type="text/css" rel="stylesheet">
+
+
 </head>
 <body>
 
@@ -12,8 +14,14 @@
 	<div class="container">
 		<div class="item">First Name:<input type="text" id="First"></div>
 		<div class = "item">Last Name:<input type="text" id ="Last"></div>
-		<div class="item"><button onclick="submit()">Submit</button></div>
+		<div class="item"><button onclick="submit(); pictures();">Submit</button></div>
 	</div>
+</div>
+
+<div class = "Reload">
+
+	<div class="item"><button onclick = "reload_button();"> Try Another player</button></div>
+
 </div>
 
 <br><br>
@@ -21,6 +29,7 @@
 <div id="output">
 <div class="title">Results:</div>
 	<table>
+		<tr><td id = "IMG"></tr></td></tr>
 		<tr><td>Name:</td><td id="resultFirst"></td></tr>
 		<tr><td>Team:</td><td id="resultTeam"></td></tr>
 		<tr><td>Games Played for Season:</td><td id="resultGames"></td></tr>
@@ -28,6 +37,7 @@
 		<tr><td>Field Goal Percentage:</td><td id="resultFG"></td></tr>
 		<tr><td>Free Throw Percentage:</td><td id="resultFT"></td></tr>
 		<tr><td>Three Point Percentage:</td><td id="resultTP"></td></tr>
+		
 	</table>
 </div>
 
