--- a/Database.html
+++ b/Database.html
@@ -16,7 +16,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 		<h3>Please input a player's first and last name into the input box, this player must have played in the 2017/2018 season.</h3>
-		<h3>The website will return the season averages for that perticular player.</h3>
+		<h3>The website will return the season averages for that particular player.</h3>
 
 		<h3> If you are having trouble thinking of a player to input, view a list of some examples <a href="Examples.html">here.</a>
 			
@@ -57,8 +57,8 @@
 </div>
 
 <br><br>
-<div id="raw">
-</div>
+
+
 
 </body>
 </html>
