Updated with new pictures and example players

--- a/Database.html
+++ b/Database.html
@@ -8,11 +8,26 @@
 
 </head>
 <body>	
+
+	<div class = TITLE>
+
+		<h1 class="ml2">Welcome to the NBA Stat Tracker!</h1>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+
+		<h3>Please input a player's first and last name into the input box, this player must have played in the 2017/2018 season.</h3>
+		<h3>The website will return the season averages for that perticular player.</h3>
+
+		<h3> If you are having trouble thinking of a player to input, view a list of some examples <a href="Examples.html">here.</a>
+			
+		</h3>
+	</div>
 		<div class="Input_Box">
 		<div class="item">First Name:<input type="text" id="First"></div>
 		<div class = "item">Last Name:<input type="text" id ="Last"></div>
 		<div class="item"><button onclick="submit(); pictures();">Submit</button></div>
 	</div>
+</div>	
 </div>
 
 <div class = "Reload">
